--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
         "stdio.h": "c",
         "process.h": "c",
         "main.h": "c",
-        "memory.h": "c"
+        "memory.h": "c",
+        "mman.h": "c"
     },
     "C_Cpp.errorSquiggles": "enabled"
 }
