--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
         "process.h": "c",
         "main.h": "c",
         "memory.h": "c",
-        "mman.h": "c"
+        "mman.h": "c",
+        "synchronization.h": "c"
     },
     "C_Cpp.errorSquiggles": "enabled"
 }
