--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,9 @@
         "main.h": "c",
         "memory.h": "c",
         "mman.h": "c",
-        "synchronization.h": "c"
+        "synchronization.h": "c",
+        "wait.h": "c",
+        "signal.h": "c"
     },
     "C_Cpp.errorSquiggles": "enabled"
 }
